fix build command
