# Database-Project-master/swagger.json
@@ -5,10 +5,10 @@
     "description": "Project API",
     "version": "1.0.0"
   },
-  "host": "cse341-cbjm.onrender.com",
+  "host": "localhost:3001",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/api-docs": {
